// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-base-combobox is accessible renders alternative text for icon 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-76"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-76"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
              <span
                class="slds-assistive-text"
              >
                Alternative Icon Text
              </span>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-76"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly can be disabled 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-14"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          disabled=""
          id="input-14"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-14"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly renders correctly an "option-card" item with all attributes 1`] = `
<lightning-base-combobox-item
  aria-selected="true"
  class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity slds-has-focus"
  data-item-id="input-4-0"
  data-value="accountGlobalMedia"
  id="input-4-0-4"
  role="option"
>
  #shadow-root(open)
    <span
      class="slds-media__figure"
    >
      <lightning-icon
        class="slds-icon-standard-account slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon_large"
                data-key="account"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                />
              </svg>
          </lightning-primitive-icon>
          <span
            class="slds-assistive-text"
          >
            Account icon
          </span>
      </lightning-icon>
    </span>
    <span
      class="slds-media__body"
    >
      <span
        class="slds-listbox__option-text slds-listbox__option-text_entity"
        title="Global Media"
      >
        <span
          class="slds-truncate"
        >
          <lightning-base-combobox-formatted-text>
            #shadow-root(open)
              Global Media
          </lightning-base-combobox-formatted-text>
        </span>
      </span>
      <span
        class="slds-listbox__option-meta slds-listbox__option-meta_entity"
        title="(905) 555-1212"
      >
        <span
          class="slds-truncate"
        >
          <lightning-base-combobox-formatted-text>
            #shadow-root(open)
              (905) 555-1212
          </lightning-base-combobox-formatted-text>
        </span>
      </span>
    </span>
    <span
      class="slds-media__figure slds-media__figure_reverse"
    >
      <lightning-icon
        class="slds-icon-utility-chevronright slds-icon_container"
      >
        #shadow-root(open)
          <lightning-primitive-icon>
            #shadow-root(open)
              <svg
                aria-hidden="true"
                class="slds-icon slds-icon-text-default slds-icon_large"
                data-key="chevronright"
                focusable="false"
              >
                <use
                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#chevronright"
                />
              </svg>
          </lightning-primitive-icon>
          <span
            class="slds-assistive-text"
          >
            Chevron icon
          </span>
      </lightning-icon>
    </span>
</lightning-base-combobox-item>
`;

exports[`lightning-base-combobox renders properly with dropdown open 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-activedescendant="input-17-0-17"
          aria-autocomplete="none"
          aria-controls="dropdown-element-17"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-17"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-17"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="true"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain slds-has-focus"
          data-item-id="input-17-0"
          data-value="actionSearchAdvanced"
          id="input-17-0-17"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <lightning-base-combobox-formatted-text
                class="slds-truncate"
                title="Advanced Search..."
              >
                #shadow-root(open)
                  Advanced Search...
              </lightning-base-combobox-formatted-text>
            </span>
        </lightning-base-combobox-item>
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
          data-item-id="input-17-1"
          data-value="accountGlobalMedia"
          id="input-17-1-17"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-standard-account slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon_small"
                        data-key="account"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-listbox__option-text slds-listbox__option-text_entity"
                title="Global Media"
              >
                <span
                  class="slds-truncate"
                >
                  <lightning-base-combobox-formatted-text>
                    #shadow-root(open)
                      Global Media
                  </lightning-base-combobox-formatted-text>
                </span>
              </span>
              <span
                class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                title="(905) 555-1212"
              >
                <span
                  class="slds-truncate"
                >
                  <lightning-base-combobox-formatted-text>
                    #shadow-root(open)
                      (905) 555-1212
                  </lightning-base-combobox-formatted-text>
                </span>
              </span>
            </span>
        </lightning-base-combobox-item>
      </div>
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly with items 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-1"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-1"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-1"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly with maxlength 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-29"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-29"
          maxlength="50"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-29"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly with showSpinnerActivity, but only if it's set 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-32"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-32"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-32"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox renders properly with showSpinnerActivity, but only if it's set 2`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-32"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-32"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-32"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox triggers events triggers closing dropdown with escape key 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-activedescendant="input-234-0-234"
          aria-autocomplete="none"
          aria-controls="dropdown-element-234"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-234"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-234"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="true"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain slds-has-focus"
          data-item-id="input-234-0"
          data-value="actionSearchAdvanced"
          id="input-234-0-234"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <lightning-base-combobox-formatted-text
                class="slds-truncate"
                title="Advanced Search..."
              >
                #shadow-root(open)
                  Advanced Search...
              </lightning-base-combobox-formatted-text>
            </span>
        </lightning-base-combobox-item>
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
          data-item-id="input-234-1"
          data-value="accountGlobalMedia"
          id="input-234-1-234"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-standard-account slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon_small"
                        data-key="account"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-listbox__option-text slds-listbox__option-text_entity"
                title="Global Media"
              >
                <span
                  class="slds-truncate"
                >
                  <lightning-base-combobox-formatted-text>
                    #shadow-root(open)
                      Global Media
                  </lightning-base-combobox-formatted-text>
                </span>
              </span>
              <span
                class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                title="(905) 555-1212"
              >
                <span
                  class="slds-truncate"
                >
                  <lightning-base-combobox-formatted-text>
                    #shadow-root(open)
                      (905) 555-1212
                  </lightning-base-combobox-formatted-text>
                </span>
              </span>
            </span>
        </lightning-base-combobox-item>
      </div>
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox triggers events triggers closing dropdown with escape key 2`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-234"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-234"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-234"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
          data-item-id="input-234-0"
          data-value="actionSearchAdvanced"
          id="input-234-0-234"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <lightning-base-combobox-formatted-text
                class="slds-truncate"
                title="Advanced Search..."
              >
                #shadow-root(open)
                  Advanced Search...
              </lightning-base-combobox-formatted-text>
            </span>
        </lightning-base-combobox-item>
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
          data-item-id="input-234-1"
          data-value="accountGlobalMedia"
          id="input-234-1-234"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-standard-account slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon_small"
                        data-key="account"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-listbox__option-text slds-listbox__option-text_entity"
                title="Global Media"
              >
                <span
                  class="slds-truncate"
                >
                  <lightning-base-combobox-formatted-text>
                    #shadow-root(open)
                      Global Media
                  </lightning-base-combobox-formatted-text>
                </span>
              </span>
              <span
                class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                title="(905) 555-1212"
              >
                <span
                  class="slds-truncate"
                >
                  <lightning-base-combobox-formatted-text>
                    #shadow-root(open)
                      (905) 555-1212
                  </lightning-base-combobox-formatted-text>
                </span>
              </span>
            </span>
        </lightning-base-combobox-item>
      </div>
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox triggers events triggers open dropdown on keyboard input for standard variant 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-activedescendant="input-210-0-210"
          aria-autocomplete="none"
          aria-controls="dropdown-element-210"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-210"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-210"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="true"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain slds-has-focus"
          data-item-id="input-210-0"
          data-value="actionSearchAdvanced"
          id="input-210-0-210"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <lightning-base-combobox-formatted-text
                class="slds-truncate"
                title="Advanced Search..."
              >
                #shadow-root(open)
                  Advanced Search...
              </lightning-base-combobox-formatted-text>
            </span>
        </lightning-base-combobox-item>
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
          data-item-id="input-210-1"
          data-value="accountGlobalMedia"
          id="input-210-1-210"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-standard-account slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon_small"
                        data-key="account"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <span
                class="slds-listbox__option-text slds-listbox__option-text_entity"
                title="Global Media"
              >
                <span
                  class="slds-truncate"
                >
                  <lightning-base-combobox-formatted-text>
                    #shadow-root(open)
                      Global Media
                  </lightning-base-combobox-formatted-text>
                </span>
              </span>
              <span
                class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                title="(905) 555-1212"
              >
                <span
                  class="slds-truncate"
                >
                  <lightning-base-combobox-formatted-text>
                    #shadow-root(open)
                      (905) 555-1212
                  </lightning-base-combobox-formatted-text>
                </span>
              </span>
            </span>
        </lightning-base-combobox-item>
      </div>
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox with a pill should render a pill when a pill is set 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_left-right"
        role="none"
      >
        <lightning-icon
          class="slds-icon-standard-account slds-icon_container slds-combobox__input-entity-icon"
        >
          #shadow-root(open)
            <lightning-primitive-icon>
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon slds-icon_x-small"
                  data-key="account"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
            </lightning-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Account
            </span>
        </lightning-icon>
        <input
          aria-controls="dropdown-element-50"
          autocomplete="off"
          class="slds-input slds-combobox__input slds-combobox__input-value"
          id="input-50"
          placeholder="Some Choice"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <button
            class="slds-button slds-button_icon slds-input__icon slds-input__icon_right"
            title="Clear Selection"
            type="button"
          >
            <lightning-primitive-icon>
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-button__icon"
                  data-key="close"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                  />
                </svg>
            </lightning-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Clear Selection
            </span>
          </button>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-50"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox with empty items will not open empty dropdown 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-autocomplete="none"
          aria-controls="dropdown-element-35"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-35"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-35"
        role="listbox"
      />
    </div>
</lightning-base-combobox>
`;

exports[`lightning-base-combobox with items supports groups 1`] = `
<lightning-base-combobox
  class="slds-combobox_container"
>
  #shadow-root(open)
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
      role="combobox"
    >
      <div
        class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
        role="none"
      >
        <input
          aria-activedescendant="input-79-5-79"
          aria-autocomplete="none"
          aria-controls="dropdown-element-79"
          autocomplete="off"
          class="slds-input slds-combobox__input"
          id="input-79"
          placeholder="Select an Item"
          readonly=""
          role="textbox"
          type="text"
        />
        <div
          class="slds-input__icon-group slds-input__icon-group_right"
        >
          <lightning-icon
            class="slds-icon-utility-down slds-input__icon slds-input__icon_right slds-icon_container"
          >
            #shadow-root(open)
              <lightning-primitive-icon>
                #shadow-root(open)
                  <svg
                    aria-hidden="true"
                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                    data-key="down"
                    focusable="false"
                  >
                    <use
                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#down"
                    />
                  </svg>
              </lightning-primitive-icon>
          </lightning-icon>
        </div>
      </div>
      <div
        class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
        data-dropdown-element="true"
        id="dropdown-element-79"
        role="listbox"
      >
        <lightning-base-combobox-item
          aria-selected="false"
          class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
          data-item-id="input-79-0"
          data-value="actionSearchAdvanced"
          id="input-79-0-79"
          role="option"
        >
          #shadow-root(open)
            <span
              class="slds-media__figure"
            >
              <lightning-icon
                class="slds-icon-utility-search slds-icon_container"
              >
                #shadow-root(open)
                  <lightning-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-icon slds-icon-text-default slds-icon_x-small"
                        data-key="search"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                        />
                      </svg>
                  </lightning-primitive-icon>
              </lightning-icon>
            </span>
            <span
              class="slds-media__body"
            >
              <lightning-base-combobox-formatted-text
                class="slds-truncate"
                title="Advanced Search..."
              >
                #shadow-root(open)
                  Advanced Search...
              </lightning-base-combobox-formatted-text>
            </span>
        </lightning-base-combobox-item>
        <ul
          role="group"
        >
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
              data-item-id="input-79-1"
              data-value="actionSearchAdvanced"
              id="input-79-1-79"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <lightning-base-combobox-formatted-text
                    class="slds-truncate"
                    title="Advanced Search..."
                  >
                    #shadow-root(open)
                      Advanced Search...
                  </lightning-base-combobox-formatted-text>
                </span>
            </lightning-base-combobox-item>
          </li>
        </ul>
        <ul
          aria-label="Group 1"
          role="group"
        >
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <div
              class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
              role="presentation"
            >
              <h3
                class="slds-text-title_caps"
                role="presentation"
                title="Group 1"
              >
                Group 1
              </h3>
            </div>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-79-2"
              data-value="accountGlobalMedia"
              id="input-79-2-79"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                    title="Global Media"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          Global Media
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                    title="(905) 555-1212"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          (905) 555-1212
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-79-3"
              data-value="accountGlobalMedia"
              id="input-79-3-79"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                    title="Global Media"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          Global Media
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                    title="(905) 555-1212"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          (905) 555-1212
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-79-4"
              data-value="accountGlobalMedia"
              id="input-79-4-79"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                    title="Global Media"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          Global Media
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                    title="(905) 555-1212"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          (905) 555-1212
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
        </ul>
        <ul
          aria-label="Group 2"
          role="group"
        >
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <div
              class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
              role="presentation"
            >
              <h3
                class="slds-text-title_caps"
                role="presentation"
                title="Group 2"
              >
                Group 2
              </h3>
            </div>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="true"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity slds-has-focus"
              data-item-id="input-79-5"
              data-value="accountGlobalMedia"
              id="input-79-5-79"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                    title="Global Media"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          Global Media
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                    title="(905) 555-1212"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          (905) 555-1212
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
              data-item-id="input-79-6"
              data-value="actionSearchAdvanced"
              id="input-79-6-79"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <lightning-base-combobox-formatted-text
                    class="slds-truncate"
                    title="Advanced Search..."
                  >
                    #shadow-root(open)
                      Advanced Search...
                  </lightning-base-combobox-formatted-text>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-79-7"
              data-value="accountGlobalMedia"
              id="input-79-7-79"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                    title="Global Media"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          Global Media
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                    title="(905) 555-1212"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          (905) 555-1212
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
          <li
            class="slds-listbox__item"
            role="presentation"
          >
            <lightning-base-combobox-item
              aria-selected="false"
              class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
              data-item-id="input-79-8"
              data-value="accountGlobalMedia"
              id="input-79-8-79"
              role="option"
            >
              #shadow-root(open)
                <span
                  class="slds-media__figure"
                >
                  <lightning-icon
                    class="slds-icon-standard-account slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon_small"
                            data-key="account"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </span>
                <span
                  class="slds-media__body"
                >
                  <span
                    class="slds-listbox__option-text slds-listbox__option-text_entity"
                    title="Global Media"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          Global Media
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                  <span
                    class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                    title="(905) 555-1212"
                  >
                    <span
                      class="slds-truncate"
                    >
                      <lightning-base-combobox-formatted-text>
                        #shadow-root(open)
                          (905) 555-1212
                      </lightning-base-combobox-formatted-text>
                    </span>
                  </span>
                </span>
            </lightning-base-combobox-item>
          </li>
        </ul>
      </div>
    </div>
</lightning-base-combobox>
`;
